2006-01-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/common.py (Base.get_object): New function, to avoid
	accessing private members from subclasses.

	* kiwi/ui/test/player.py (Player.delete_window): delete the
	reference to the window, so it can be destroyed properly and
	new windows can be put here, eg when we reopen the dialog.

2006-01-24  Henrique Romano  <henrique@async.com.br>

	* kiwi/ui/widgets/label.py (Label.set_underline): 
	Implements set_underline method and a minor cleanup on all the other
	text properties setters.

2006-01-23  Johan Dahlin  <jdahlin@async.com.br>

	* examples/list/stockicon.py: New example to demonstrate this feature.

	* kiwi/ui/widgets/list.py: Add Column:use_stock and Column:icon-size.
	
2006-01-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/python.py (Settable): Another idea from twisted imported,
	and improved.

	* kiwi/ui/test/listener.py: Pass signals to event types.
	Add a SkipEvent exception to be able to filter inside the
	event. Fix DoubleClick event on the list to be caught earlier.
	
	* kiwi/ui/test/player.py (ThreadSafeFunction._invoke): 
	Refactor to always return False after the call.

	* kiwi/ui/test/listener.py: Add a new event for toolbutton clicks.

2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combobox.py (ComboBox.clear): Emit content-changed 
	here so the model is updated.

	* kiwi/ui/test/listener.py:
	* kiwi/ui/widgets/list.py:
	Add get_selected_row_number() and double_click() methods to the
	klist.

	Add support for List::double-click signal in the ui test.

	Fixes #2385

2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/common.py: Add support for GtkToolButtons

	* kiwi/ui/test/player.py:
	Update UI tests, to be able to run several times in the same
	process as done in stoqs ui test framework.
	
2006-01-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py: Add support for py2exe, based on
	patch by Carlos Augusto Marcicano
